# DeepHallu

./: .gitignore  ATTENTION_HOOKS_README.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROJECT_INITIATION.md  README.md  RESEARCH_GUIDE_CN.md  SYSTEM.md  pyproject.toml  requirements.txt  run_web.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project_initiation.md
data/: README.md  mme  vqav2
deephallu/: __init__.py  core.py  models.py  utils.py
docs/: README.md  llava_next.md
docs/literature/: PROBLEM_FORMULATION.md  REVIEW_CN.md
examples/: README.md  attention_hooks_demo.py  basic_usage.py
notebooks/: README.md  analytics_llava.ipynb  attention_llava.ipynb  baseline_deepseek_vl2.ipynb  baseline_llava.ipynb  baseline_qwen2.5_vl.ipynb  benchmark_mme.ipynb  data_exploratory_analysis.ipynb  datasets_llava_bench.ipynb  datasets_mme.ipynb  datasets_mscoco.ipynb  datasets_vqa_v2.ipynb  exploration_llava_outputs.ipynb  exploration_llava_token2patch.ipynb
results/: results.csv
scripts/: attention_modification_experiment.py
src/deephallu/: __init__.py  helloworld.py
src/deephallu/analysis/: image_processor_analysis.py
src/deephallu/analytics/: plot.py  run.py
src/deephallu/data/: mme.py
src/deephallu/evaluation/: __init__.py  metrics.py
src/deephallu/hooks/: attention_hooks.py
src/deephallu/inference/: infer.py
src/deephallu/models/: __init__.py  base.py  llava_next.py  llava_next_t2p_mapper.py  token2patch.py
src/deephallu/preprocessing/: __init__.py  mme.py
src/deephallu/web/: claude.md
src/deephallu/web/backend/: app.py  config.yaml
src/deephallu/web/backend/api/: datasets.py
src/deephallu/web/backend/core/: config.py
src/deephallu/web/backend/models/: dataset_models.py
src/deephallu/web/backend/services/: dataset_service.py
src/deephallu/web/frontend/: CLAUDE.md  package-lock.json  package.json
src/deephallu/web/frontend/src/app/: layout.tsx  page.tsx
src/deephallu/web/frontend/src/components/: Header.tsx  MainContent.tsx  Sidebar.tsx  Toolbar.tsx
src/deephallu/web/frontend/src/components/views/: AttentionMapView.tsx  OverviewView.tsx  TokenPredictionView.tsx
src/deephallu/web/frontend/src/data/: analysis-template.json  images.json  models.json  scores.json  sequences.json
src/deephallu/web/frontend/src/lib/: mockData.ts  types.ts
tests/: __init__.py  llava_next_attention.py  test_deephallu.py
