[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deephallu"
version = "0.1.0"
description = "DeepHallu: Hallucination in Vision Language Models"
authors = [
    { name = "Mou YongLi", email = "mou@dbis.rwth-aachen.de" },
    { name = "Jan Ebigt" },
    { name = "Stefan Decker" }
]
license = { text = "MIT" }
readme = "README.md"  # Optional
requires-python = ">=3.8"  # Adjust as needed
urls = { "Homepage" = "https://github.com/MouYongli/DeepHallu" }
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "nvitop==1.4.2",
    "einops==0.8.1",
    "flash_attn==2.7.4.post1",
    "timm==1.0.15",
    "transformers==4.49.0",
    "xformers==0.0.29.post3",
    "accelerate==1.4.0",
    "sentencepiece==0.2.0",
    "attrdict==2.0.1",
    "tiktoken==0.9.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]