[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deephallu"
version = "0.1.0"
description = "A deep learning framework for hallucination detection and mitigation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Yongli Mou", email = "mou@dbis.rwth-aachen.de"},
    {name = "Er Jin"},
    {name = "Johannes Stegmaier"},
    {name = "Shin'ichi Satoh"},
    {name = "Stefan Decker"},
]
keywords = [
    "deep-learning",
    "hallucination",
    "analysis",
    "mitigation",
    "machine-learning",
    "nlp",
    "computer-vision"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.9.0",
    "transformers>=4.0.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.900",
    "pre-commit>=2.15",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]

[project.urls]
Homepage = "https://github.com/MouYongli/DeepHallu"
Repository = "https://github.com/MouYongli/DeepHallu"
Documentation = "https://github.com/MouYongli/DeepHallu/docs"
"Bug Tracker" = "https://github.com/MouYongli/DeepHallu/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deephallu*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=deephallu --cov-report=term-missing"